--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
   <script>window.__theme = 'bs4';</script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/7.0.1/markdown-it.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it-emoji/1.2.0/markdown-it-emoji.min.js"></script>
   <app-root>Loading...</app-root>
 </body>
 </html>
