Adding a better title and description, fixes #41.

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SimpleVote</title>
+  <title>SimpleVote - An open-source, live updating, voting platform based on range voting.</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="SimpleVote is an open-source, self-hostable, live-updating voting/polling platform, for both live meetings, or extended polls."/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
